# reconly

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extensions-catalog.json  mkdocs.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  docs.yml  release.yml  security.yml
config/: sources.yaml
docker/: .gitattributes  docker-compose.postgres.yml  docker-compose.searxng.yml  init-postgres.sql
docker/demo/: .env.demo  Dockerfile.demo  docker-compose.yml  entrypoint-demo.sh
docker/demo/init/: demo-data.sql
docker/demo/seed/: .gitkeep  digests.json  feeds.json  schema.json  sources.json  tags.json  templates.json
docker/oss/: .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docker/oss/state/: .gitkeep
docker/searxng/: limiter.toml  settings.yml
docs/: ADDING_EXPORTERS.md  ADDING_FETCHERS.md  ADDING_PROVIDERS.md  EXTENSION_DEVELOPMENT.md  INSTALLING_EXTENSIONS.md  README.md  SECURITY.md  cli.md  configuration.md  demo-mode.md  deployment.md  development.md  feature-setup-guide.md  index.md  rag-setup.md  setup.md  ui.md
docs/admin/: configuration.md  deployment.md  extensions.md  feature-setup-guide.md  installation.md  rag-setup.md
docs/admin/sources/: agent-research-source.md  imap-email-source.md
docs/bundles/: BUNDLE_SPEC.md
docs/developer/: adding-exporters.md  adding-fetchers.md  adding-providers.md  api.md  demo-mode.md  development.md  extension-development.md  ui.md
docs/developer/bundles/: BUNDLE_CREATOR_PROMPT.md
docs/developer/migrations/: README.md  TEMPLATE.md
docs/guide/: concepts.md  getting-started.md  keyboard-shortcuts.md  knowledge-graph.md  managing-feeds.md  managing-sources.md  reading-digests.md  templates.md  troubleshooting.md  using-chat.md
docs/integrations/: n8n.md
docs/sources/: agent-research-source.md  imap-email-source.md
scripts/: clear_test_data.py  load_demo_seed.py  query_db.py  run_reconly.py  security-audit.sh  send_test_email.py
tests/: conftest.py  edition_fixtures.py
tests/api/: conftest.py  test_agent_runs.py  test_auth.py  test_batch_delete.py  test_bundles.py  test_connections_api.py  test_dashboard.py  test_digests.py  test_edition_filtering.py  test_edition_matrix.py  test_export_to_path.py  test_exporters.py  test_extensions.py  test_extensions_github.py  test_feed_runs.py  test_feeds.py  test_graph.py  test_imap_sources.py  test_rag.py  test_search.py  test_settings.py  test_sources.py  test_tags.py  test_templates.py
tests/chat/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_e2e.py  test_service.py  test_tools.py  test_tools_execution.py  test_tools_impl.py
tests/core/: test_connection_service.py  test_digest_crud.py  test_edition.py  test_metadata.py  test_rss.py  test_source_content_models.py  test_tracking.py
tests/core/agents/: test_agent_fetcher.py  test_agent_integration.py  test_capabilities.py  test_fetch.py  test_research.py  test_search.py  test_settings.py  test_strategies.py
tests/core/email/: __init__.py  test_config.py  test_content_extraction.py  test_crypto.py  test_generic_provider.py  test_oauth.py  test_oauth_registry.py
tests/core/exporters/: __init__.py  test_exporters.py  test_registry.py
tests/core/extensions/: __init__.py  test_catalog.py  test_installer.py  test_loader.py  test_settings.py
tests/core/fetchers/: test_fetchers.py  test_imap_connection_integration.py  test_imap_incremental.py  test_registry.py  test_website.py  test_youtube.py
tests/core/rag/: __init__.py  (+10 more)
tests/e2e/: __init__.py  test_github_extension_install.py
tests/mcp/: __init__.py  test_mcp_tools.py
ui/: astro.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
ui/src/: app.ts  chatApi.ts
(+214 files in other folders)
